fix layout issues on dashes page

--- a/projects/dashes/dashes.scss
+++ b/projects/dashes/dashes.scss
@@ -6,7 +6,7 @@ ul {
         color: #876;
     }
 }
-li {
+ul li {
     float: left;
     margin: 10px 20px 10px 0;
     border: 1px solid #ccc;
